formated the paragraph

--- a/playpart.html
+++ b/playpart.html
@@ -8,59 +8,41 @@
 <body>
     <h1>Jaswitha Kalikiri acts in a Play</h1>
     <h6>Hedda Gabler by the Author "Henrick Ibsen"</h6>
-    BRACK.
+    <p><h6>BRACK.</h6>
     Have you had no visitors?
-
-    HEDDA.
-    [Closing the glass door.] Not one. I suppose all our set are still out
+</p>
+    <p><h6>HEDDA.</h6>
+    <p>[Closing the glass door.]</p> Not one. I suppose all our set are still out
     of town.
-
-    BRACK.
+    </p>
+    <p><h6>BRACK.</h6>
     And is Tesman not at home either?
-
-    HEDDA.
-    [At the writing-table, putting the pistol-case in a drawer which she
-    shuts.] No. He rushed off to his aunt's directly after lunch; he didn't
+    </p>
+    <p><h6>HEDDA.</h6>
+    <p>[At the writing-table, putting the pistol-case in a drawer which she
+    shuts.]</p> No. He rushed off to his aunt's directly after lunch; he didn't
     expect you so early.
-
-    BRACK.
+    </p>
+    <p><h6>BRACK.</h6>
     H'm--how stupid of me not to have thought of that!
-
-    HEDDA.
-    [Turning her head to look at him.] Why stupid?
-
-    BRACK.
+    </p>
+    <p><h6>HEDDA.</h6>
+    <p>[Turning her head to look at him.]</p> Why stupid?
+    </p>
+    <p><h6>BRACK.</h6>
     Because if I had thought of it I should have come a little--earlier.
-
-    HEDDA.
-    [Crossing the room.] Then you would have found no one to receive you;
+    </p>
+    <p><h6>HEDDA.</h6>
+    <p>[Crossing the room.]</p> Then you would have found no one to receive you;
     for I have been in my room changing my dress ever since lunch.
-
-    BRACK.
+    </p>
+    <p><h6>BRACK.</h6>
     And is there no sort of little chink that we could hold a parley
     through?
-
-    HEDDA.
+    </p>
+    <p><h6>HEDDA.</h6>
     You have forgotten to arrange one.
-
-    BRACK.
-    That was another piece of stupidity.
-
-    HEDDA.
-    Well, we must just settle down here--and wait. Tesman is not likely to
-    be back for some time yet.
-
-    BRACK.
-    Never mind; I shall not be impatient.
-
-    HEDDA seats herself in the corner of the sofa. BRACK lays his
-    overcoat over the back of the nearest chair, and sits down, but
-    keeps his hat in his hand. A short silence. They look at each
-    other.
-
-    HEDDA.
-    Well?
-
+    </p>
 </body>
 
 </html>
