--- a/playpart.html
+++ b/playpart.html
@@ -2,46 +2,47 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="ibsen.css">
     <title>Assignment 4 on Play</title>
 </head>
 
 <body>
     <h1>Jaswitha Kalikiri acts in a Play</h1>
-    <h6>Hedda Gabler by the Author "Henrick Ibsen"</h6>
-    <p><h6>BRACK.</h6>
-    Have you had no visitors?
-</p>
-    <p><h6>HEDDA.</h6>
-    <p>[Closing the glass door.]</p> Not one. I suppose all our set are still out
+    <h4>Hedda Gabler by the Author "Henrick Ibsen"</h4>
+    <h6>BRACK.</h6>
+    <p class="Speech">Have you had no visitors?
+    </p>
+    <h6>HEDDA.</h6>
+    <p class="direction">[Closing the glass door.]</p> <p class="Speech">Not one. I suppose all our set are still out
     of town.
     </p>
-    <p><h6>BRACK.</h6>
-    And is Tesman not at home either?
+    <h6>BRACK.</h6>
+    <p class="Speech">And is Tesman not at home either?
     </p>
-    <p><h6>HEDDA.</h6>
-    <p>[At the writing-table, putting the pistol-case in a drawer which she
-    shuts.]</p> No. He rushed off to his aunt's directly after lunch; he didn't
+    <h6>HEDDA.</h6>
+    <p class="direction">[At the writing-table, putting the pistol-case in a drawer which she
+    shuts.]</p> <p class="Speech">No. He rushed off to his aunt's directly after lunch; he didn't
     expect you so early.
     </p>
-    <p><h6>BRACK.</h6>
-    H'm--how stupid of me not to have thought of that!
+    <h6>BRACK.</h6>
+    <p class="Speech">H'm--how stupid of me not to have thought of that!
     </p>
-    <p><h6>HEDDA.</h6>
-    <p>[Turning her head to look at him.]</p> Why stupid?
+    <h6>HEDDA.</h6>
+    <p class="direction">[Turning her head to look at him.]</p> <p class="Speech">Why stupid?
     </p>
-    <p><h6>BRACK.</h6>
-    Because if I had thought of it I should have come a little--earlier.
+    <h6>BRACK.</h6>
+    <p class="Speech">Because if I had thought of it I should have come a little--earlier.
     </p>
-    <p><h6>HEDDA.</h6>
-    <p>[Crossing the room.]</p> Then you would have found no one to receive you;
+    <h6>HEDDA.</h6>
+    <p class="direction">[Crossing the room.]</p> <p class="Speech">you would have found no one to receive you;
     for I have been in my room changing my dress ever since lunch.
     </p>
-    <p><h6>BRACK.</h6>
-    And is there no sort of little chink that we could hold a parley
+    <h6>BRACK.</h6>
+    <p class="Speech">And is there no sort of little chink that we could hold a parley
     through?
     </p>
-    <p><h6>HEDDA.</h6>
-    You have forgotten to arrange one.
+    <h6>HEDDA.</h6>
+    <p class="Speech">You have forgotten to arrange one.
     </p>
 </body>
 
