--- a/playpart.html
+++ b/playpart.html
@@ -9,41 +9,62 @@
 <body>
     <h1>Jaswitha Kalikiri acts in a Play</h1>
     <h4>Hedda Gabler by the Author "Henrick Ibsen"</h4>
-    <h6>BRACK.</h6>
+    <h6 class="BRACK">BRACK.</h6>
     <p class="Speech">Have you had no visitors?
     </p>
-    <h6>HEDDA.</h6>
+    <h6 class="HEDDA">HEDDA.</h6>
     <p class="direction">[Closing the glass door.]</p> <p class="Speech">Not one. I suppose all our set are still out
     of town.
     </p>
-    <h6>BRACK.</h6>
+    <h6 class="BRACK">BRACK.</h6>
     <p class="Speech">And is Tesman not at home either?
     </p>
-    <h6>HEDDA.</h6>
+    <h6 class="HEDDA">HEDDA.</h6>
     <p class="direction">[At the writing-table, putting the pistol-case in a drawer which she
     shuts.]</p> <p class="Speech">No. He rushed off to his aunt's directly after lunch; he didn't
     expect you so early.
     </p>
-    <h6>BRACK.</h6>
+    <h6 class="BRACK">BRACK.</h6>
     <p class="Speech">H'm--how stupid of me not to have thought of that!
     </p>
-    <h6>HEDDA.</h6>
+    <h6 class="HEDDA">HEDDA.</h6>
     <p class="direction">[Turning her head to look at him.]</p> <p class="Speech">Why stupid?
     </p>
-    <h6>BRACK.</h6>
+    <h6 class="BRACK">BRACK.</h6>
     <p class="Speech">Because if I had thought of it I should have come a little--earlier.
     </p>
-    <h6>HEDDA.</h6>
+    <h6 class="HEDDA">HEDDA.</h6>
     <p class="direction">[Crossing the room.]</p> <p class="Speech">you would have found no one to receive you;
     for I have been in my room changing my dress ever since lunch.
     </p>
-    <h6>BRACK.</h6>
+    <h6 class="BRACK">BRACK.</h6>
     <p class="Speech">And is there no sort of little chink that we could hold a parley
     through?
     </p>
-    <h6>HEDDA.</h6>
+    <h6 class="HEDDA">HEDDA.</h6>
     <p class="Speech">You have forgotten to arrange one.
     </p>
+    <br>
+
+    <div>
+        <table class="table">
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Understudy</th>
+            </tr>
+            <tr>
+                <td>BRACK</td>
+                <td>Rajinikanth</td>
+                <td>More Suitable for this character than the present character</td>
+            </tr>
+            <tr>
+                <td>HEDDA</td>
+                <td>Sri Devi</td>
+                <td>Due to the current actor's busy schedule</td>
+            </tr>
+        </table>
+    </div>
 </body>
 
 </html>
