--- a/playpart.html
+++ b/playpart.html
@@ -65,7 +65,7 @@
             </tr>
         </table>
     </div>
-    <a href="extra.html">Link to Extra page</a>
+    <a href="Secondact.html">Link to Secondact page</a>
 </body>
 
 </html>
