Updated Bonus page

--- a/Secondact.html
+++ b/Secondact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ibsen.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>a Smidgeon more</title>
 </head>
 
@@ -27,7 +28,39 @@
     <h6 class="BRACK">BRACK.</h6>
     <p class="direction">[In the same tone.]</p>
     <p class="Speech"> Well?</p>
+    <br>
+    <div>
+        <table class="table">
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Understudy</th>
+            </tr>
+            <tr>
+                <td>Brack</td>
+                <td>Arjun</td>
+                <td>Busy Schedule</td>
+            </tr>
+            <tr>
+                <td>Hedda</td>
+                <td>Thara</td>
+                <td>better actor</td>
+            </tr>
+        </table>
+    </div>
     <a href="playpart.html">To go back to other page</a>
+    <br>
+    <i class="glyphicon glyphicon-thumbs-up" style="font-size: 40px; color: rgb(29, 150, 112);"></i>
+    <img src="brack.png" alt="A image related to the play" height="100px" width="100px"><br>
+    <br>
+    <br>
+    <i class="glyphicon glyphicon-cloud" style="font-size: 40px; color: rgb(29, 150, 112);"></i>
+    <img src="Hedda.png" alt="A image related to play" height="100px" width="100px"><br>
+    <br>
+    <ul class="navbar-horizontal">
+        <li><a href="playpart.html">playpart</a></li>
+        <li><a href="Secondact.html">Secondact</a></li>
+    </ul>
 </body>
 
 </html>
