--- a/playpart.html
+++ b/playpart.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="ibsen.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Assignment 4 on Play</title>
 </head>
 
@@ -66,6 +67,19 @@
         </table>
     </div>
     <a href="Secondact.html">Link to Secondact page</a>
+    <br>
+    <br>
+    <i class="glyphicon glyphicon-user" style="font-size: 40px; color: blue;"></i>
+    <img src="brack.png" alt="A image related to the play" height="100px" width="100px"><br>
+    <br>
+    <br>
+    <i class="glyphicon glyphicon-cloud" style="font-size: 40px; color: blue;"></i>
+    <img src="Hedda.png" alt="A image related to play" height="100px" width="100px"><br>
+    <br>
+    <ul class="navbar-horizontal">
+        <li><a href="playpart.html">playpart</a></li>
+        <li><a href="Secondact.html">Secondact</a></li>
+    </ul>
 </body>
 
 </html>
